# JXXRS

./: CMakeLists.txt  Makefile  README.md  configure
cmake/: JXXRSConfig.cmake.in
examples/OS/: CMakeLists.txt
examples/OS/API/include/OS/API/: Client.h  Error.h
examples/OS/API/include/OS/API/Model/: Error.h  ErrorResponse.h  Link.h  MediaType.h  Version.h  VersionResponse.h  VersionsResponse.h
examples/OS/API/src/OS/API/: Client.cpp  Error.cpp
examples/OS/API/src/OS/API/Model/: Error.cpp  ErrorResponse.cpp  Link.cpp  MediaType.cpp  Version.cpp  VersionResponse.cpp  VersionsResponse.cpp
examples/OS/Keystone/include/OS/Keystone/V2/Model/: Access.h  Auth.h  AuthRequest.h  AuthResponse.h  Endpoint.h  ErrorResponse.h  Metadata.h  PasswordCredentials.h  Role.h  Service.h  Tenant.h  Tenants.h  Token.h  Trust.h  User.h
examples/OS/Keystone/include/OS/Keystone/V3/Model/: Auth.h  AuthRequest.h  AuthResponse.h  ChallengeResponse.h  Domain.h  Endpoint.h  Error.h  ErrorResponse.h  Identity.h  Links.h  Password.h  Project.h  Role.h  Scope.h  Service.h  Token.h  User.h
examples/OS/Keystone/src/OS/Keystone/V2/Model/: Access.cpp  Auth.cpp  AuthRequest.cpp  AuthResponse.cpp  Endpoint.cpp  ErrorResponse.cpp  Metadata.cpp  PasswordCredentials.cpp  Role.cpp  Service.cpp  Tenant.cpp  Tenants.cpp  Token.cpp  Trust.cpp  User.cpp
examples/OS/Keystone/src/OS/Keystone/V3/Model/: #Auth.hpp#  Auth.cpp  AuthRequest.cpp  AuthResponse.cpp  ChallengeResponse.cpp  Domain.cpp  Endpoint.cpp  Error.cpp  ErrorResponse.cpp  Identity.cpp  Links.cpp  Password.cpp  Project.cpp  Role.cpp  Scope.cpp  Service.cpp  Token.cpp  User.cpp
include/JXXRS/: AbstractClientBuilder.h  BasicConnectionFactory.h  Client.h  ClientBuilder.h  Configurable.h  Configuration.h  Connection.h  ConnectionFactory.h  Entity.h  Error.h  Invocation.h  JsonEntity.h  MediaType.h  PoolingConnectionFactory.h  Request.h  Response.h  StreamEntity.h  TextEntity.h  WebTarget.h
src/: CMakeLists.txt
src/JXXRS/: AbstractClientBuilder.h  AbstractClientBuilder.hpp  BasicConnectionFactory.cpp  Client.hpp  ClientBuilder.cpp  ClientBuilder.hpp  Connection.hpp  ConnectionFactory.hpp  Entity.cpp  Entity.hpp  Error.cpp  Error.hpp  Invocation.hpp  JsonEntity.cpp  JsonEntity.hpp  MediaType.cpp  MediaType.hpp  PoolingConnectionFactory.cpp  Request.hpp  Response.hpp  SSLProtocol.hpp  StreamEntity.cpp  StreamEntity.hpp  TextEntity.cpp  TextEntity.hpp  WebTarget.hpp
src/JXXRS/Accessor/: GetEntity.cpp
src/JXXRS/PocoImpl/: BasicConnectionFactory.cpp  BasicConnectionFactory.h  BasicConnectionFactory.hpp  Client.cpp  Client.h  Client.hpp  ClientBuilder.cpp  ClientBuilder.h  ClientBuilder.hpp  Configuration.cpp  Configuration.h  Connection.cpp  Connection.h  Connection.hpp  HTTPClientSessionFactory.cpp  HTTPClientSessionFactory.h  Invocation.cpp  Invocation.h  Invocation.hpp  PoolingConnectionFactory.cpp  PoolingConnectionFactory.h  PoolingConnectionFactory.hpp  Request.cpp  Request.h  Request.hpp  Response.cpp  Response.h  Response.hpp  Session.cpp  Session.h  Session.hpp  WebTarget.cpp  WebTarget.h  WebTarget.hpp
test/: CMakeLists.txt  clientBuilderTest.cpp  clientTest.cpp
test/Mock/: BasicConnectionFactory.cpp  BasicConnectionFactory.h  HTTPClientSession.cpp  HTTPClientSession.h  HTTPClientSessionFactory.cpp  HTTPClientSessionFactory.h
test/Model/: EchoRequest.cpp  EchoRequest.h  EchoResponse.cpp  EchoResponse.h  Header.cpp  Header.h
